# brc

./: .gitignore  Justfile  flake.nix  package.json  result.txt  tsconfig.json
both/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json
both/src/: lib.rs  main.js
rust/: Cargo.toml
rust/src/: main.rs
typescript/: main.ts  package.json  tsconfig.json
