
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "both"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fnv = "1.0.7"
memmap2 = "0.9.9"
napi = "3.0.0"
napi-derive = "3.0.0"
pprof = { version = "0.15.0", features = ["protobuf", "prost-codec"] }


[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
